--- a/Labo3-TemplateBoussole/app/src/main/res/layout/activity_bar.xml
+++ b/Labo3-TemplateBoussole/app/src/main/res/layout/activity_bar.xml
@@ -3,4 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <Button
+        android:id="@+id/delayed_send_request"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/" />
 </LinearLayout>
