bar activity debigging

--- a/Labo3-TemplateBoussole/app/src/main/res/layout/activity_bar.xml
+++ b/Labo3-TemplateBoussole/app/src/main/res/layout/activity_bar.xml
@@ -5,8 +5,8 @@
 
 
     <Button
-        android:id="@+id/delayed_send_request"
+        android:id="@+id/button_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/" />
+        android:text="@string/main_butt_bar" />
 </LinearLayout>
