--- a/Labo3-TemplateBoussole/app/src/main/res/layout/activity_nfc_auth.xml
+++ b/Labo3-TemplateBoussole/app/src/main/res/layout/activity_nfc_auth.xml
@@ -4,28 +4,26 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="@string/enter_username_hint"/>
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="@string/enter_password_hint"/>
-
     <Button
-        android:id="@+id/buttonConnect"
+        android:id="@+id/buttonMaxSecurity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/connect_button_text"/>
+        android:text="@string/max_security_nfc"/>
+
+    <Button
+        android:id="@+id/buttonMediumSecurity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/medium_security_nfc"/>
+
+    <Button
+        android:id="@+id/buttonLowSecurity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/low_security_nfc"/>
 
     <TextView
-        android:id="@+id/nfctimer"
+        android:id="@+id/nfcSecurityLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="" />
